<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>oripa</groupId>
	<artifactId>oripa</artifactId>
	<version>1.69</version>
	<packaging>jar</packaging>


	<name>oripa</name>
	<url>https://github.com/oripa/oripa</url>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<dependencies>

<!-- removed since codes using java3d has been killed and seems no longer to be activated. -->
<!--
		<dependency>
			<groupId>java3d</groupId>
			<artifactId>j3d-core-utils</artifactId>
			<version>1.3.1</version>
		</dependency>
-->
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
			<version>5.8.2</version>
			<scope>test</scope>
		</dependency>
		
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<version>3.0.0</version>
			<scope>test</scope>
		</dependency>

		<dependency>
  			<groupId>org.mockito</groupId>
			<artifactId>mockito-junit-jupiter</artifactId>
			<version>3.7.7</version>
			<scope>test</scope>
		</dependency>
		
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>1.8.0-beta4</version>
		</dependency>
		
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-slf4j18-impl</artifactId>
			<version>2.17.1</version>
		</dependency>
		
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>2.17.1</version>
		</dependency>

		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.8.9</version>
		</dependency>

		<dependency>
			<groupId>commons-cli</groupId>
			<artifactId>commons-cli</artifactId>
			<version>1.5.0</version>
		</dependency>

	</dependencies>



	<!-- Run "mvn package" to build a runnable jar -->
	<!-- Run "mvn jpackage:jpackage" to make an installer. On Windows, WiX 3.14 or above has to be installed. -->
	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>com.github.akman</groupId>
					<artifactId>jpackage-maven-plugin</artifactId>
					<version>0.1.5</version>
					<configuration>
						<vendor>${project.groupId}</vendor>
						<name>${project.name}</name>
						<appversion>${project.version}</appversion>

						<!-- Windows only. It causes error on other OS. -->
						<!-- <windirchooser>true</windirchooser> -->

						<input>${project.build.directory}/jars</input>
						<mainjar>${project.artifactId}-${project.version}.jar</mainjar>
						<mainclass>oripa.ORIPA</mainclass>
					</configuration>
				</plugin>
			</plugins>	
		</pluginManagement>
		

		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<source>21</source>
					<target>21</target>
				</configuration>
			</plugin>

			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.22.2</version>
			</plugin>
			<plugin>
				<artifactId>maven-assembly-plugin</artifactId>
				<version>3.1.1</version>
				<executions>
					<execution>
						<id>make-assembly</id>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<descriptorRefs>
						<descriptorRef>jar-with-dependencies</descriptorRef>
					</descriptorRefs>
					<archive>
						<manifest>
							<addClasspath>true</addClasspath>
							<mainClass>oripa.ORIPA</mainClass>
						</manifest>
						<manifestEntries>
							<Multi-Release>true</Multi-Release>
						</manifestEntries>
					</archive>
					<appendAssemblyId>false</appendAssemblyId>
				</configuration>
			</plugin>

			<!-- copy jar for jpackage -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<version>3.3.0</version>
				<executions>
					<execution>
						<id>copy-artifact</id>
						<phase>package</phase>
						<goals>
							<goal>copy</goal>
						</goals>
						<configuration>
							<artifactItems>
								<artifactItem>
									<groupId>${project.groupId}</groupId>
									<artifactId>${project.artifactId}</artifactId>
									<version>${project.version}</version>
									<type>${project.packaging}</type>
								</artifactItem>
							</artifactItems>
							<outputDirectory>${project.build.directory}/jars</outputDirectory>
							<overWriteIfNewer>true</overWriteIfNewer>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>com.github.akman</groupId>
				<artifactId>jpackage-maven-plugin</artifactId>
				<executions>
					<execution>
						<phase>verify</phase>
							<goals>
								<goal>jpackage</goal>
							</goals>
							<configuration>
								
							</configuration>
					</execution>
 				</executions>
			</plugin>

		</plugins>
	</build>
</project>
